# flights_OpenClaw

./: .env.example  Dockerfile  README.md  docker-compose.yml  mcp.json  mkdocs.yml  pyproject.toml
docs/: AI_AGENT_INTEGRATION.md  airports.md  fallbacks.md  http-api.md  index.md  local.md  mcp.md
fast_flights/: __init__.py  agent_api.py  airline_filter.py  async_api.py  config.py  core.py  errors.py  fallback_playwright.py  filter.py  flexible_dates.py  http_api.py  local_playwright.py  mcp_server.py  price_storage.py  price_tracker.py  rate_limit.py  retry.py  schema.py  schema_v2.py  types.py  utils.py
