[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "fast-flights"
version = "2.2"
description = "AI-agent-ready Google Flights scraper for Python. MCP server for Claude Desktop & OpenClaw. Structured JSON responses, Pydantic models, retry logic."
keywords = [
    "flights", 
    "google-flights", 
    "scraper", 
    "protobuf", 
    "travel",
    "ai-agent",
    "openclaw",
    "mcp",
    "model-context-protocol",
    "claude",
    "llm",
    "pydantic",
    "async",
    "flight-search",
    "airport"
]
authors = [
  { name = "AWeirdDev", email = "aweirdscratcher@gmail.com" },
  { name = "laikhtman" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.8"
dependencies = [
  "primp",
  "protobuf>=5.27.0",
  "selectolax",
]

[project.optional-dependencies]
local = [
    "playwright"
]
agent = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
mcp = [
    "mcp>=1.0",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
api = [
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
]
all = [
    "playwright",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "mcp>=1.0",
    "fastapi>=0.109.0",
    "uvicorn[standard]>=0.27.0",
    "python-multipart>=0.0.6",
]

[project.scripts]
fast-flights-mcp = "fast_flights.mcp_server:run"
fast-flights-api = "fast_flights.http_api:run"

[project.urls]
"Source" = "https://github.com/laikhtman/flights_OpenClaw"
"Issues" = "https://github.com/laikhtman/flights_OpenClaw/issues"
"Documentation" = "https://github.com/laikhtman/flights_OpenClaw#readme"

[tool.setuptools]
packages = [
    "fast_flights"
]

[tool.pyright]
pythonVersion = '3.8'

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "pip>=25.0.1",
]
